--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 # IBE Editor
-minecraft_version=1.17.1
+minecraft_version=1.18
 mod_version=2.0.7
 # Fabric https://modmuss50.me/fabric.html
-yarn_mappings=1.17.1+build.61
-loader_version=0.11.6
+yarn_mappings=1.18+build.1
+loader_version=0.12.6\
 fabric_version=0.40.1+1.17
-loom_version=0.9.+
+loom_version=0.10.+
 # Forge
 forge_version=1.17.1-37.0.59
 mappings_channel=official
