--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.18
 mod_version=2.0.7
 # Fabric https://modmuss50.me/fabric.html
 yarn_mappings=1.18+build.1
-loader_version=0.12.6\
+loader_version=0.12.6
 fabric_version=0.43.1+1.18
 loom_version=0.10.+
 # Forge
